# moniclaundry

./: DEPLOYMENT.md  PANDUAN_PEMULA_WINDOWS.md  README.md  TROUBLESHOOTING_WINDOWS.md  build-pemula.bat  build-tauri.bat  capacitor.config.ts  dev-tauri.bat  middleware.ts  next.config.mjs  package-lock.json  package.json
android/: build.gradle  gradlew  gradlew.bat  monic-key.jks
app/: layout.tsx  page.tsx
components/: BellNotification.tsx  ChartData.tsx  DepositReportExport.tsx  EditOrder.tsx  NewOrder.tsx  OrderDetails.tsx  Provider.tsx  SalesData.tsx  customerReport.tsx  database-test.tsx  debug-panel.tsx  dynamicPagination.tsx  enhanced-reports-page.tsx  excel-exporter.tsx  expense-export.tsx  expense-form.tsx  expense-table.tsx  receipt-template.tsx  serviceReport.tsx
contexts/: auth-context.tsx  branch-context.tsx
lib/: api.ts  branch-data.ts  csv-generator.ts  data.ts  demo-data.ts  excel-generator.ts  exportToExcel.ts  pdf-generator-enhanced.ts  pdf-generator-format-first-image.ts  pdf-generator-format-second-image.ts  pdf-generator-format2.ts  pdf-generator.ts  report-data-enhanced.ts  report-data-processor.ts  staff-data.ts  supabase.ts  tauri-api.ts  utils.ts
scripts/: 01-create-database.sql  01-create-tables.sql  02-seed-data.sql  03-fix-staff-table.sql  04-create-deliveries-table.sql  05-check-and-create-sample-orders.sql  08-create-inventory-and-categories-tables.sql  09-create-categories-table-fixed.sql  09-create-categories-table.sql  build-all.sh  (+16 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  menu.rs  print.rs  utils.rs
(+130 files in other folders)
