[package]
name = "monic-laundry-pos"
version = "1.0.0"
description = "Point of Sale System for Laundry Business"
authors = ["Monic Laundry"]
license = "MIT"
repository = ""
default-run = "monic-laundry-pos"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = "2"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.5.1", features = [] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }
printpdf = "0.6"

[[bin]]
name = "monic-laundry-pos"
path = "src/main.rs"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
